--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
-    "semver": "^5.3.0",
+    "node-sass": "^4.4.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "sass-loader": "^4.1.1",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
+    "vue-material": "^0.6.3",
+    "vue-resource": "^1.0.3",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^1.13.2",
